--- a/training app maven/training/src/main/resources/application-prod.properties
+++ b/training app maven/training/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 spring.application.name=training
 
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=${PROD_DB_URL}
+spring.datasource.username=${PROD_DB_USERNAME}
+spring.datasource.password=${PROD_DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
