--- a/training app maven/training/src/main/resources/application.properties
+++ b/training app maven/training/src/main/resources/application.properties
@@ -4,9 +4,12 @@ spring.datasource.url=${PROD_DB_URL}
 spring.datasource.username=${PROD_DB_USERNAME}
 spring.datasource.password=${PROD_DB_PASSWORD}
 
-spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.open-in-view=false
 
 openai.api.key=${OPENAI_API_KEY}
 logging.api.key=${LOGGING_API_KEY}
+
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.initialization-mode=never
