--- a/training app maven/training/src/main/resources/application.properties
+++ b/training app maven/training/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=training
 spring.datasource.url=${PROD_DB_URL}
 spring.datasource.username=${PROD_DB_USERNAME}
 spring.datasource.password=${PROD_DB_PASSWORD}
+spring.datasource.driver-class-name: org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
