--- a/training app maven/training/src/main/resources/application-prod.properties
+++ b/training app maven/training/src/main/resources/application-prod.properties
@@ -11,3 +11,4 @@ spring.jpa.open-in-view=false
 
 openai.api.key=${OPENAI_API_KEY}
 logging.api.key=${LOGGING_API_KEY}
+logging.api.callback=${LOGGING_API_CALLBACK}
